Se agrego .gitignore

--- a/index.html
+++ b/index.html
@@ -7,8 +7,36 @@
     </head>
 <!-- Cuerpo del blog -->
     <body class="pagina">
-        <h1 class="titular">BLOG DE CESAR CARIAS</h1>
-    </body>
+        <section class="titular">
+            <h1>BLOG DE BLOGGERS</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis nemo iure iste natus reprehenderit quibusdam repellendus, autem earum assumenda dolore provident enim dicta temporibus quas voluptas omnis rem, aperiam alias?</p>
+        </section>
+        <!-- Primer apartado -->
+        <h2>Suscribase</h2>
+        <form action="" method="post">
+            <label for="nombre">Nombre</label>
+            <input id="nombre" type="text" name="name" placeholder="introduzca su nombre">
+                <br><br>
+            <label for="apellido">Apellidos</label>
+            <input id="apellido" type="text" name="apellido" placeholder="introduzca su apellido">
+                <br><br>
+            <label for="Telefono">Telefono movil</label>
+            <input id="Telefono" type="number" name="telefono" placeholder="introduzca su numero">
+                <br><br>
+            <label for="correo">Correo electronico</label>
+            <input id="correo" type="email" name="correo" placeholder="introduzca su correo">
+            <br><br>
+            <label for="tarifa">Tarifa de suscripcion</label>
+            <select name="tarifas" id="tarifa">
+                <option value="">2.00$</option>
+                <option value="">4.00$</option>
+                <option value="">8.00$</option>
+                <option value="">16.00$</option>
+            </select>
+                <br><br>
+            <input type="submit" value="Subir" />
+        </form>
+    </body> 
 <!-- Pie del blog -->
     <footer>
     </footer>
