--- a/blog.html
+++ b/blog.html
@@ -21,14 +21,14 @@
             <article>
                 <h2>Titulo de articulo 2</h2>
                 <p>Descripcion del articulo 2.</p>
-                <img src="/SRC/saul.jpg" alt="imagen 1">
+                <img src="/SRC/jesse.jpg" alt="imagen 1">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, dolores neque recusandae itaque quasi voluptate nesciunt officiis iusto nam iure aliquam totam laboriosam beatae quod animi, vitae quo quae. Ea?</p>
             </article>
 
             <article>
                 <h2>Titulo de articulo 3</h2>
                 <p>Descripcion del articulo 3.</p>
-                <img src="/SRC/saul.jpg" alt="imagen 1">
+                <img src="/SRC/waltuh.jpg" alt="imagen 1">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur, dolores neque recusandae itaque quasi voluptate nesciunt officiis iusto nam iure aliquam totam laboriosam beatae quod animi, vitae quo quae. Ea?</p>
             </article>
         </section>
